# Pybind-C-Package

./: CMakeLists.txt  Readme.md  run.sh  setup.py  test.txt
include/: flintpoc.h
src/: bindings.cpp  flintpoc.cpp
